--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ if(BUILD_SHARED_LIBS)
 else()
     option(STATIC_WINDOWS_RUNTIME "Use static (MT/MTd) Windows runtime"      ON )
 endif()
-option(OPEN3D_USE_ONEAPI          "Use Intel OneAPI BaseKit and DPC++"       OFF)
-if(OPEN3D_USE_ONEAPI)
+option(BUILD_SYCL_MODULE          "Build SYCL module with Intel oneAPI"      OFF)
+if(BUILD_SYCL_MODULE)
     option(GLIBCXX_USE_CXX11_ABI  "Set -D_GLIBCXX_USE_CXX11_ABI=1"           ON )
 else()
     option(GLIBCXX_USE_CXX11_ABI  "Set -D_GLIBCXX_USE_CXX11_ABI=1"           OFF)
@@ -252,27 +252,27 @@ project(Open3D
     LANGUAGES C CXX)
 message(STATUS "Open3D ${OPEN3D_VERSION_FULL}")
 
-# Check OneAPI compatiblility
-if (OPEN3D_USE_ONEAPI AND NOT CMAKE_CXX_COMPILER_ID MATCHES "IntelLLVM")
-    message(FATAL_ERROR "OPEN3D_USE_ONEAPI requires IntelLLVM (DPC++) compiler, "
+# Check SYCL compatiblility
+if (BUILD_SYCL_MODULE AND NOT CMAKE_CXX_COMPILER_ID MATCHES "IntelLLVM")
+    message(FATAL_ERROR "BUILD_SYCL_MODULE requires IntelLLVM (DPC++) compiler, "
                         "but got ${CMAKE_CXX_COMPILER_ID}.")
 endif()
-if (OPEN3D_USE_ONEAPI AND (NOT UNIX OR APPLE))
-    message(FATAL_ERROR "Open3D OneAPI support is only available on Linux")
+if (BUILD_SYCL_MODULE AND (NOT UNIX OR APPLE))
+    message(FATAL_ERROR "Open3D SYCL support is only available on Linux")
 endif()
-if(OPEN3D_USE_ONEAPI AND NOT GLIBCXX_USE_CXX11_ABI)
-    message(FATAL_ERROR "OPEN3D_USE_ONEAPI=ON requires GLIBCXX_USE_CXX11_ABI=ON")
+if(BUILD_SYCL_MODULE AND NOT GLIBCXX_USE_CXX11_ABI)
+    message(FATAL_ERROR "BUILD_SYCL_MODULE=ON requires GLIBCXX_USE_CXX11_ABI=ON")
 endif()
-if(OPEN3D_USE_ONEAPI AND BUILD_TENSORFLOW_OPS)
-    message(FATAL_ERROR "OPEN3D_USE_ONEAPI=ON requires BUILD_TENSORFLOW_OPS=OFF")
+if(BUILD_SYCL_MODULE AND BUILD_TENSORFLOW_OPS)
+    message(FATAL_ERROR "BUILD_SYCL_MODULE=ON requires BUILD_TENSORFLOW_OPS=OFF")
 endif()
-if(OPEN3D_USE_ONEAPI AND BUILD_PYTORCH_OPS)
-    message(FATAL_ERROR "OPEN3D_USE_ONEAPI=ON requires BUILD_PYTORCH_OPS=OFF")
+if(BUILD_SYCL_MODULE AND BUILD_PYTORCH_OPS)
+    message(FATAL_ERROR "BUILD_SYCL_MODULE=ON requires BUILD_PYTORCH_OPS=OFF")
 endif()
 
 # Global flag to set CXX standard.
 # This does not affect 3rd party libraries.
-if (OPEN3D_USE_ONEAPI)
+if (BUILD_SYCL_MODULE)
     set(CMAKE_CXX_STANDARD 17)
 else()
     set(CMAKE_CXX_STANDARD 14)
