Use name dictionary for skybox

--- a/cpp/open3d/visualization/CMakeLists.txt
+++ b/cpp/open3d/visualization/CMakeLists.txt
@@ -96,6 +96,11 @@ if (BUILD_GUI)
     target_sources(visualization PRIVATE
         app/Viewer.cpp
     )
+
+    # target_sources(visualization PRIVATE
+    #     app/Resource.cpp
+    # )
+
 endif()
 
 
