--- a/cpp/open3d/visualization/gui/CMakeLists.txt
+++ b/cpp/open3d/visualization/gui/CMakeLists.txt
@@ -28,6 +28,7 @@ target_sources(GUI PRIVATE
     PickPointsInteractor.cpp
     ProgressBar.cpp
     SceneWidget.cpp
+    GeometryEditor.cpp
     Slider.cpp
     StackedWidget.cpp
     TabControl.cpp
