fixed issues, working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -307,7 +307,7 @@ if(UNIX OR CYGWIN)
     include(GNUInstallDirs)
     set(Open3D_INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}")
     set(Open3D_INSTALL_BIN_DIR "${CMAKE_INSTALL_BINDIR}")
-    set(Open3D_INSTALL_LIB_DIR "${CMAKE_INSTALL_LIBDIR}")
+    set(Open3D_INSTALL_LIB_DIR lib)
     set(Open3D_INSTALL_CMAKE_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 else()
     set(Open3D_INSTALL_INCLUDE_DIR include)
