3-31-2021 - More changes to Visualizer Tutorials
* Renamed both tutorial files through git mv
* Added more inter-document links
* Cleaned the Basic Tutorial as per Sameer's recommendations
* Cleaned and modified "Rendering Sub-Models" section in the Advanced Tutorial
* Removed "Rendering Monkey Wireframe LineSet" section from the Advanced Tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,13 @@ docs/python_api/
 docs/conf.py
 docs/Doxyfile
 docs/getting_started.rst
+docs/tutorial/visualization/!temp_scratchpad.rst
+docs/tutorial/visualization/basic_tutorial.md
+docs/tutorial/visualization/open3d_visualizer_excerpts.rst
+*.tgz
+*.bin
+*.gltf
+*.png
+*.jpg
+examples/test_data/demo_scene_assets/README
+docs/tutorial/visualization/!visualizer_scratchpad.rst
