added sensor support, rgbd support example, todo: bag support in sensor slam

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -77,7 +77,10 @@ if (BUILD_GUI)
     open3d_add_example(OffscreenRendering)
     open3d_add_example(TICPSequential        Open3D::3rdparty_threads)
     open3d_add_example(TICP                  Open3D::3rdparty_threads)
-    open3d_add_example(DenseSLAMGUI          Open3D::3rdparty_threads)
+    open3d_add_example(RGBDDenseSLAM         Open3D::3rdparty_threads)
+    if (BUILD_LIBREALSENSE)
+        open3d_add_example(RealSenseDenseSLAM Open3D::3rdparty_librealsense Open3D::3rdparty_threads)
+    endif()
 endif()
 
 if(BUILD_WEBRTC)
@@ -91,7 +94,6 @@ if (BUILD_LIBREALSENSE)
         open3d_add_example(RealSenseBagReader    Open3D::3rdparty_librealsense Open3D::3rdparty_jsoncpp)
     endif()
     open3d_add_example(RealSenseRecorder     Open3D::3rdparty_librealsense)
-    open3d_add_example(RealSenseDenseSLAM    Open3D::3rdparty_librealsense)
 endif()
 
 if (BUILD_AZURE_KINECT)
