--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -71,13 +71,16 @@ open3d_add_example(Visualizer)
 open3d_add_example(Voxelization)
 
 if (BUILD_GUI)
-    open3d_add_example(DenseSLAM)
     open3d_add_example(Draw)
     open3d_add_example(MultipleWindows       Open3D::3rdparty_threads)
     open3d_add_example(OffscreenRendering)
     open3d_add_example(TICPSequential        Open3D::3rdparty_threads)
     open3d_add_example(TICP                  Open3D::3rdparty_threads)
-    open3d_add_example(DenseSLAMGUI          Open3D::3rdparty_threads)
+    open3d_add_example(OfflineSLAM           Open3D::3rdparty_threads)
+    open3d_add_example(OnlineSLAMRGBD        Open3D::3rdparty_threads)
+    if (BUILD_LIBREALSENSE)
+        open3d_add_example(OnlineSLAMRealSense Open3D::3rdparty_librealsense Open3D::3rdparty_threads)
+    endif()
 endif()
 
 if(BUILD_WEBRTC)
