--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ cmake-build-release/
 util/pip_package/dist/
 doxygen/
 node_modules/
+examples/
 
 # Editor files
 *.*~
@@ -88,3 +89,5 @@ docs/Doxyfile
 docs/getting_started.rst
 docs/docker.rst
 docs/tensorboard.md
+docs/tutorial/visualization/!visualizer_scratchpad.rst
+docs/tutorial/visualization/visualizer_basic (backup).rst
