--- a/.github/workflows/ubuntu-sycl.yml
+++ b/.github/workflows/ubuntu-sycl.yml
@@ -16,7 +16,7 @@ env:
   GCE_CLI_GHA_VERSION: "302.0.0"
 
 jobs:
-  ubuntu:
+  ubuntu-sycl:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
