--- a/.github/workflows/vtk_packages.yml
+++ b/.github/workflows/vtk_packages.yml
@@ -1,8 +1,8 @@
 name: VTK_Packages
 
 on:
-  pull_request:
-    branches: [ master ]
+  # pull_request:
+    # branches: [ master ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
