--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ docs/docker.rst
 docs/tensorboard.md
 docs/tutorial/visualization/!visualizer_scratchpad.rst
 docs/tutorial/visualization/visualizer_basic (backup).rst
+docs/tutorial/visualization/visualizer_advanced (backup).rst
+docs/tutorial/data/index (backup).rst
