--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -26,9 +26,7 @@ jobs:
         run: |
           ./util/install_deps_ubuntu.sh assume-yes
           sudo apt-get install --yes cmake
-          sudo apt-get install --yes clang-7
-          sudo apt-get install --yes clang-format-10
-          python -m pip install -U yapf==0.30.0 nbformat
+          python -m pip install -U clang-format~=10.0.0 yapf==0.30.0 nbformat
       - name: Run style check
         run: |
           mkdir build
