--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,12 +19,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  PIP_VER: "21.1.1"
-  WHEEL_VER: "0.35.1"
-  STOOLS_VER: "50.3.2"
-  PYTEST_VER: "6.0.1"
-  PYTEST_RANDOMLY_VER: "3.8.0"
-  SCIPY_VER: "1.5.4"
   JEDI_VER: "0.17.2"  # https://github.com/ipython/ipython/issues/12740
   IDNA_VER: "2.8"  # https://github.com/psf/requests/issues/5710
   SRC_DIR: "D:\\a\\open3d\\open3d"
@@ -199,11 +193,8 @@ jobs:
         working-directory: ${{ env.BUILD_DIR }}
         run: |
           $ErrorActionPreference = 'Stop'
-          python -m pip install --upgrade pip==${{ env.PIP_VER }} `
-            wheel==${{ env.WHEEL_VER }} `
-            setuptools==${{ env.STOOLS_VER }} `
-            jedi==${{ env.JEDI_VER }} `
-            idna==${{ env.IDNA_VER }}
+          python -m pip install -r ..\python\requirements_build.txt
+          python -m pip install --upgrade jedi==${{ env.JEDI_VER }} idna==${{ env.IDNA_VER }}
           cmake --build . --config ${{ matrix.CONFIG }} --target install-pip-package
       - name: Import python package
         # If SHARED == ON, Open3D.dll needs to be copied, which is not recommended for python.
@@ -272,9 +263,7 @@ jobs:
         working-directory: ${{ env.BUILD_DIR }}
         run: |
           $ErrorActionPreference = 'Stop'
-          python -m pip install --upgrade pip==${{ env.PIP_VER }} `
-                                          wheel==${{ env.WHEEL_VER }} `
-                                          setuptools==${{ env.STOOLS_VER }}
+          python -m pip install -r ..\python\requirements_build.txt
           cmake --build . --parallel ${{ env.NPROC }} --config Release --target pip-package
           $PIP_PKG_NAME=(Get-ChildItem lib/python_package/pip_package/open3d*.whl).Name
           echo "PIP_PKG_NAME=$PIP_PKG_NAME"  | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
@@ -357,13 +346,8 @@ jobs:
           python -m venv open3d_test_venv
           open3d_test_venv\Scripts\Activate.ps1
 
-          python -m pip install --upgrade pip==${{ env.PIP_VER }} `
-            wheel==${{ env.WHEEL_VER }} `
-            setuptools==${{ env.STOOLS_VER }}
-          python -m pip install -U pytest==${{ env.PYTEST_VER }}
-          python -m pip install -U pytest-randomly==${{ env.PYTEST_RANDOMLY_VER }}
-          python -m pip install -U scipy==${{ env.SCIPY_VER }} `
-            tensorboard==${{ env.TENSORFLOW_VER }}
+          python -m pip install -r python\requirements_build.txt
+          python -m pip install -r python\requirements_test.txt
           $py_tag=(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
           if (Test-Path -Path "pip_package") {
             $PIP_PKG_NAME=(Get-ChildItem pip_package\open3d*-$py_tag-*.whl).Name
